# notifs-server

./: .flake8  .gitignore  README.md  docker-compose.yml  docker-entrypoint.sh  heroku-Dockerfile  local-Dockerfile  pylintrc  pyproject.toml
.github/: codecov.yml
.github/workflows/: pipeline.yml
docker/: Dockerfile  coverage-compose.yml  docker-compose.yml  heroku-Dockerfile  pytest.Dockerfile  testdb-compose.yml
docker/sql/: create_tables.sql
heroku/datadog-config/: datadog.yaml
scripts/: add-google-credentials.sh  coverage-container.sh  cp-root.sh  docker-entrypoint.sh  docker-pytest.sh  heroku-entrypoint.sh  install.sh  lint.sh  local-container.sh  test-container.sh
src/: constants.py  main.py  schemas.py
src/app/: messages.py  notifications.py  tokens.py
src/firebase/: access.py
src/middleware/: middleware.py  utils.py
src/mocks/firebase/: auth.py  database.py
src/repositories/: message_utils.py  notifications_utils.py  token_utils.py
tests/: conftest.py  test_main.py  test_messages.py  test_tokens.py
