[tool.poetry]
name = "python-fastapi-server"
version = "0.1.0"
description = ""
authors = ["Facundo Mastricchio <facundomastricchio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
flake8 = "^4.0.1"
pylint = "^2.13.5"
pytest-cov = "^3.0.0"
black = "^22.3.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
